Adjust navbar styles: fix image height and clean up spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -46,7 +46,6 @@ body {
   font-family: "Inter", sans-serif;
 
 }
-
 nav.navbar {
   position: fixed;
   top: 0;
@@ -54,6 +53,7 @@ nav.navbar {
   z-index: 9999;
   
 }
+
 .navbar-nav .nav-link.active {
   position: relative;
   font-weight: 500;
@@ -74,7 +74,7 @@ nav.navbar {
   align-items: center;
 }
 .navbar-brand img {
-  height: 24px;
+  height: 46px;
   margin-right: 8px;
 }
 
